classDiagram
  subgraph Core
    class System {
      -world
      +initialize()
      +update()
      +handle_event()
      +entities_with()
      +emit_event()
      +queue_command()
    }
  end
  subgraph Systems
    class CollisionSystem {
      -logger
      +initialize()
      +update()
      +handle_event()
      +find_entities_at_position()
      +handle_specific_collisions()
    }
    System <|-- CollisionSystem
    class InputSystem {
      -logger
      -input_handler
      -quit
      +initialize()
      +update()
      +quit?()
    }
    System <|-- InputSystem
    class InventoryRenderSystem {
      -renderer
      -logger
      -message_system
      -currently_selected_item_index
      -item_action_mode
      +initialize()
      +render_inventory()
      +render_equipment_section()
      +select_item()
      +show_item_actions()
      +handle_input()
      +draw_text()
      +draw_panel_border()
      +get_item_color()
      +get_item_display_string()
      +show_item_details()
    }
    class InventorySystem {
      -logger
      -message_system
      +initialize()
      +add_item()
      +remove_item()
      +use_item()
      +equip_item()
      +unequip_item()
      +drop_item()
      +item_name()
      +use_consumable()
      +toggle_equip()
      +log_message()
    }
    class ItemInteractionSystem {
      -inventory_system
      -message_system
      +initialize()
      +process_items_at_location()
      +pickup_item()
      +pickup_all_items()
      +find_items_at_position()
    }
    class MazeSystem {
      -logger
      -difficulty
      -seed
      -algorithm
      -type_factory
      +initialize()
      +update()
      +handle_event()
      +generate_maze()
      +populate_entities()
      +find_stairs_position()
      +ensure_path()
    }
    System <|-- MazeSystem
    class MessageSystem {
      -message_queue
      -logger
      -manager
      +initialize()
      +update()
      +render()
      +selection_mode?()
      +toggle_selection_mode()
      +valid_menu_option?()
      +handle_input()
      +handle_event()
      +log_message()
      +log_success()
      +log_warning()
      +log_critical()
      +get_recent_messages()
      +add_message()
      +process_message_queue()
      +trim_message_queue()
      +importance_value()
    }
    System <|-- MessageSystem
    class MonsterSystem {
      -player
      -monsters
      -logger
      -rng
      +initialize()
      +spawn_monsters()
      +update()
      +monster_at()
      +player_collision?()
      +handle_event()
      +determine_monster_count()
      +spawn_monster()
      +find_spawn_location()
      +select_weighted_monster_type()
    }
    System <|-- MonsterSystem
    class MovementSystem {
      -logger
      +initialize()
      +update()
      +process_entity_movement()
      +move()
      +can_process?()
      +get_target_cell()
      +can_move_to?()
    }
    System <|-- MovementSystem
    class RenderSystem {
      -renderer
      -difficulty
      -seed
      -logger
      +initialize()
      +update()
      +render_grid()
      +render_messages()
    }
    System <|-- RenderSystem
    class System {
      -world
      +initialize()
      +update()
      +handle_event()
      +entities_with()
      +emit_event()
      +queue_command()
    }
  end
  %% Relationships
